# AI-Writer

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
apps/native/: index.html  package.json  vite.config.ts
apps/native/src/: content-repository.ts  generation-job-repository.ts  knowledge-repository-basic.ts  knowledge-repository.ts  main.tsx  platform.ts  provider-repository.ts  provider-runtime.ts  secure-storage.ts  usage-repository.ts  writing-repository.ts
apps/native/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/migrations/: 0001_initial.sql  0002_content_management.sql  0003_knowledge_library.sql  0003_plain_text_only.sql  0004_writing_pipeline_usage.sql
apps/native/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json
apps/web/src/: main.tsx
docs/design/: 01-方案定位与总体架构.md  02-前端领域与平台抽象.md  03-Rust原生层与通信.md  04-模型生成与上下文.md  05-数据安全与多平台.md  06-工程结构状态与异常.md  07-导入导出测试与发布.md  08-开发规划风险与结论.md  09-记忆与RAG系统.md  10-纯文本编辑器决策.md  11-AI写作与Token统计统一架构.md  12-Token仅统计不限制决策.md
docs/development/: 01-foundation-status.md  02-provider-runtime-status.md  03-content-and-job-persistence-status.md  04-content-management-history-status.md  05-plain-text-and-knowledge-library-status.md  06-writing-pipeline-usage-status.md  07-writing-orchestrator-status.md  08-writing-insights-status.md
