[package]
name = "ai-writer"
version = "0.2.0"
description = "Local-first AI novel writing application"
authors = ["RIVERS0FT"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ai_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3
